--- a/exercise5/logistic_regression2.ipynb
+++ b/exercise5/logistic_regression2.ipynb
@@ -144,6 +144,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>returnLabel</th>\n",
+       "      <th>totalAmount</th>\n",
        "      <th>1000</th>\n",
        "      <th>1001</th>\n",
        "      <th>1002</th>\n",
@@ -152,7 +153,6 @@
        "      <th>1005</th>\n",
        "      <th>1006</th>\n",
        "      <th>1008</th>\n",
-       "      <th>1009</th>\n",
        "      <th>...</th>\n",
        "      <th>9991</th>\n",
        "      <th>9992</th>\n",
@@ -170,7 +170,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>264</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -194,7 +194,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>60</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -218,7 +218,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>60</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -242,7 +242,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>333</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -266,7 +266,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>378</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -289,25 +289,25 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 8712 columns</p>\n",
+       "<p>5 rows × 8713 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   returnLabel  1000  1001  1002  1003  1004  1005  1006  1008  1009  ...  \\\n",
-       "0            0     0     0     0     0     0     0     0     0     0  ...   \n",
-       "1            1     0     0     0     0     0     0     0     0     0  ...   \n",
-       "2            0     0     0     0     0     0     0     0     0     0  ...   \n",
-       "3            0     0     0     0     0     0     0     0     0     0  ...   \n",
-       "4            0     0     0     0     0     0     0     0     0     0  ...   \n",
+       "   returnLabel  totalAmount  1000  1001  1002  1003  1004  1005  1006  1008  \\\n",
+       "0            0          264     0     0     0     0     0     0     0     0   \n",
+       "1            1           60     0     0     0     0     0     0     0     0   \n",
+       "2            0           60     0     0     0     0     0     0     0     0   \n",
+       "3            0          333     0     0     0     0     0     0     0     0   \n",
+       "4            0          378     0     0     0     0     0     0     0     0   \n",
        "\n",
-       "   9991  9992  9993  9994  9995  9996  9997  9998  9999  10000  \n",
-       "0     0     0     0     0     0     0     0     0     0      0  \n",
-       "1     0     0     0     0     0     0     0     0     0      0  \n",
-       "2     0     0     0     0     0     0     0     0     0      0  \n",
-       "3     0     0     0     0     0     0     0     0     0      0  \n",
-       "4     0     0     0     0     0     0     0     0     0      0  \n",
+       "   ...  9991  9992  9993  9994  9995  9996  9997  9998  9999  10000  \n",
+       "0  ...     0     0     0     0     0     0     0     0     0      0  \n",
+       "1  ...     0     0     0     0     0     0     0     0     0      0  \n",
+       "2  ...     0     0     0     0     0     0     0     0     0      0  \n",
+       "3  ...     0     0     0     0     0     0     0     0     0      0  \n",
+       "4  ...     0     0     0     0     0     0     0     0     0      0  \n",
        "\n",
-       "[5 rows x 8712 columns]"
+       "[5 rows x 8713 columns]"
       ]
      },
      "execution_count": 3,
@@ -318,7 +318,7 @@
    "source": [
     "zipcode_one_hot = pd.get_dummies(toydata['zipCode'])\n",
     "\n",
-    "toydata.drop(['basket','totalAmount','transactionId','zipCode'],axis=1,inplace=True)\n",
+    "toydata.drop(['basket','transactionId','zipCode'],axis=1,inplace=True)\n",
     "toydata = pd.concat([toydata,zipcode_one_hot],axis=1)\n",
     "toydata.head()"
    ]
